# grpc-client-server

./: CMakeLists.txt  vcpkg.json
client/: CMakeLists.txt  main.cpp
cmake_scripts/: common.cmake
helper/: CMakeLists.txt  helper.cpp  helper.h
server/: CMakeLists.txt  main.cpp
